# python-getpaid-stripe

./: .gitignore  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/research/: checkout-vs-payment-intents.md  stripe-amounts-currencies.md  stripe-refunds.md  stripe-webhooks.md
src/getpaid_stripe/: __init__.py  currencies.py  processor.py  types.py
src/getpaid_stripe/simulator/: __init__.py  plugin.py  routes.py  signing.py  transitions.py  webhooks.py
tests/: conftest.py  payloads.py  test_config.py  test_currencies.py  test_entry_points.py  test_extract_correlation.py  test_fetch_payment_status.py  test_handle_callback.py  test_preauth.py  test_prepare_transaction.py  test_refunds.py  test_simulator_plugin.py  test_simulator_scenarios.py  test_verify_callback.py
